--- a/data_security/data.css
+++ b/data_security/data.css
@@ -1,7 +1,7 @@
 body {
   background-color: red;
   font-size: 120%;
-  color: #0000FF;
+  color: #666666;
   font-family: sans-serif;
 }
 #maincontent {
