--- a/AI/style_AI.css
+++ b/AI/style_AI.css
@@ -37,6 +37,28 @@
     padding: 21px 0;
 }
 
+.parallax { 
+    /* The image used */
+    background-image: url("");
+
+    /* Set a specific height */
+    height: 500px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    /* Text-Formating */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-shadow: 0 0 5px #000;
+    margin: 0;
+    padding: 21px 0;
+}  
 #navbar {
   text-align: center;
 }
