--- a/AI/style_AI.css
+++ b/AI/style_AI.css
@@ -68,10 +68,11 @@
   border-radius: 10px;
   font-size: 120%;
   font-weight: 550;
-  color: white;
+  color: black;
   padding: 8px 15px;
   text-align: center;
   display: inline-block;
+  
 }
 
 #navbar a:link, #navbar a:visited {
