--- a/AI/style_AI.css
+++ b/AI/style_AI.css
@@ -64,6 +64,7 @@
 }
 
 #navbar a {
+   /* text-formating of the navigation bar*/
   background-color: white;
   border-radius: 10px;
   font-size: 120%;
@@ -72,7 +73,7 @@
   padding: 8px 15px;
   text-align: center;
   display: inline-block;
-  
+  text-shadow: 0 0 5px #000;
 }
 
 #navbar a:link, #navbar a:visited {
