--- a/AI/style_AI.css
+++ b/AI/style_AI.css
@@ -39,7 +39,7 @@
 
 .parallax { 
     /* The image used */
-    background-image: url("");
+    background-image: url("AI-img.jpeg");
 
     /* Set a specific height */
     height: 500px; 
