--- a/AI/style_AI.css
+++ b/AI/style_AI.css
@@ -73,6 +73,7 @@
   padding: 8px 15px;
   text-align: center;
   display: inline-block;
+  text-shadow: 0 0 1px #000;
 }
 
 #navbar a:link, #navbar a:visited {
