--- a/AI/style_AI.css
+++ b/AI/style_AI.css
@@ -8,6 +8,8 @@
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     text-align: center;
     font-size: 50px;
+    text-decoration: none;
+    color: white;
 }
 
 .NORMALASSTEXT{
