--- a/AI/style_AI.css
+++ b/AI/style_AI.css
@@ -8,7 +8,7 @@ body{
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
-.MEDIUMASSTITLE{
+.MEDIUMASSLINK{
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     text-align: center;
     font-size: 50px;
