--- a/AI/style_AI.css
+++ b/AI/style_AI.css
@@ -16,6 +16,12 @@ body{
     color: white;
 }
 
+.MEDIUMASSTITLE{
+    font-size: 80px;
+    text-align: center;
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+
 .NORMALASSTEXT{
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     font-size: 20px;
