--- a/AI/style_AI.css
+++ b/AI/style_AI.css
@@ -90,3 +90,12 @@ body{
   background-color: #66f;
 }
 
+.footer{
+    position:fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #808080;
+    color: black;
+    text-align:center;
+}
