--- a/styles/styles_home.css
+++ b/styles/styles_home.css
@@ -5,7 +5,7 @@ body {
   font-family: sans-serif;
 }
 #maincontent {
-  text-align: center;
+  padding: 0% 20%;
 }
 #navbar {
   text-align: center;
@@ -28,4 +28,15 @@ body {
 
 #navbar a:hover, #navbar a:active {
   background-color: #66f;
+}
+
+#info{
+  border-radius: 10px;
+  padding: 10px;
+  background-color: #ddf;
+  color: black;
+  font-size: 100%;
+}
+#info li{
+  padding-bottom: 10px;
 }
