--- a/ai_team1/style_AI.css
+++ b/ai_team1/style_AI.css
@@ -1,5 +1,8 @@
-body{
+html, body {
+	padding: 0;
+	margin: 0;
     background-color: #C0C0C0;
+
 }
 
 .BIGASSTITLE{
@@ -98,4 +101,33 @@ body{
     background-color: #808080;
     color: black;
     text-align:center;
+}
+
+/*
+#site-footer {
+	padding: 25px 0;
+	font-size: 85%;
+	background-color: #2A2A2A;
+	position: fixed;
+	z-index: -1;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+*/
+
+#site-content {
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-image: url('http://dummyimage.com/3000x3000/D1D1D1/2A2A2A.png?text=Scroll+Down');
+}
+
+#site-footer {
+	min-height: 20vw;
+	/* DID THIS SO YOU CAN SEE IT AUTOMATICALLY SCALE - SIMULATION RESPONSIVENESS */
+	/* RESIZE THE WINDOW AND THEN SCROLL VERITCALLY AGAIN */
+	background-size: cover;
+	background-position: center;
+	background-image: url('http://dummyimage.com/1500x1500/2A2A2A/FFF.png?text=Footer+Area+(Resize+Me)');
 }
