--- a/ai_team1/style_AI.css
+++ b/ai_team1/style_AI.css
@@ -22,7 +22,11 @@ body {
     font-size: 20px;
 }
 .QUOTE{
-	
+	font-family: "Brush Script MT", cursive;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 7.7px;
 }
 
 .parallax { 
