--- a/ai_team1/style_AI.css
+++ b/ai_team1/style_AI.css
@@ -75,6 +75,30 @@ body {
     margin: 0;
     padding: 21px 0;
 }  
+
+.parallax3 { 
+    /* The image used */
+    background-image: url("processor-2217771_1920.jpeg");
+
+    /* Set a specific height */
+    height: 500px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    /* Text-Formating */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    text-shadow: 0 0 5px #000;
+    margin: 0;
+    padding: 21px 0;
+}
+
 #navbar {
   text-align: center;
 }
