--- a/ai_team1/style_AI.css
+++ b/ai_team1/style_AI.css
@@ -78,7 +78,7 @@ body {
 
 .parallax3 { 
     /* The image used */
-    background-image: url("processor-2217771_1920.jpeg");
+    background-image: url("processor-2217771_1920.jpg");
 
     /* Set a specific height */
     height: 500px; 
