--- a/ai_team1/style_AI.css
+++ b/ai_team1/style_AI.css
@@ -77,7 +77,7 @@ body {
 
 .parallax3 { 
     /* The image used */
-    background-image: url(".jpg");
+    background-image: url("laptop-2838917_1920.jpg");
 
     /* Set a specific height */
     height: 500px; 
