--- a/ai_team1/style_AI.css
+++ b/ai_team1/style_AI.css
@@ -33,6 +33,7 @@ body {
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 400;
+	font-size: 20px ;
 	line-height: 7.7px;
 	text-align: center;
 }
