--- a/ai_team1/style_AI.css
+++ b/ai_team1/style_AI.css
@@ -20,6 +20,7 @@ body {
 .NORMALTEXT{
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     font-size: 20px;
+    color: black;
 }
 
 .LINKTEXT{
